--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "doctrine/doctrine-bundle": "~1.5",
     "doctrine/orm": "~2.5",
     "symfony/validator": "~2.3",
-    "symfony/form": "~2.3"
+    "symfony/form": "~2.3",
+    "stof/doctrine-extensions-bundle": "^1.2"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.5",
