--- a/src/Kyoushu/CommonBundle/Resources/config/services.yml
+++ b/src/Kyoushu/CommonBundle/Resources/config/services.yml
@@ -16,3 +16,11 @@ services:
         class: Kyoushu\CommonBundle\Upload\UploadHandler
         arguments:
             - "%kernel.root_dir%/../web"
+
+    kyoushu_common.event_listener.entity_subscriber:
+       class: Kyoushu\CommonBundle\EventListener\EntitySubscriber
+       arguments:
+           - @kyoushu_common.routing.router_cache
+           - @kyoushu_common.upload.handler
+       tags:
+           - { name: doctrine.event_subscriber, connection: default }
